# parch-welcome

./: .gitignore  Build.py  Cargo.toml  Debug.py  LICENCE  PKGBUILD  README.md  build.rs  com.parchlinux.welcome.json  main.css  main.py  main.ui  main.ui.py  meson.build  parch-welcome.pro
data/: com.parchlinux.welcome.autostart.desktop  com.parchlinux.welcome.desktop.in  com.parchlinux.welcome.gschema.xml  com.parchlinux.welcome.metainfo.xml.in  com.parchlinux.welcome.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
resources/: application.desktop
rootcopy/: Install.sh
src/: 01-Generate.py  02-Compile.sh  03-Build.sh  QrcGenerate.py  Res.py  Welcome.py  i18n.rs  main.cpp  main.rs  meson.build  processhandler.cpp  processhandler.h  utils.rs  window.rs
src/UI/: ParchLinux.qml  res.qrc
src/assets/: ParchLinux.qml  res.qrc
src/resources/: com.parchlinux.welcome.gresource.xml  window.ui
ui/: ParchLinux.slint  parch-welcome.slint
ui/pages/: en.slint  fa.slint  globals.slint  pages.slint
