[package]
name = "parch-welcome"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Welcome application for the Parch Linux distribution"
repository = "https://github.com/parchlinux/parch-welcome"

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
gtk = { package = "gtk4", version = "0.9" }
